--- a/artsy/templates/index.html
+++ b/artsy/templates/index.html
@@ -26,8 +26,8 @@
   <div class="row">
     <p class="top-marg">
       ARTSy is an interactive plot showing the 24hr QPE product from
-      <a href="http://www.nssl.noaa.gov/projects/mrms/" >MRMS</a>
-      initially created by Tony Lorenzo of the
+      <a href="http://www.nssl.noaa.gov/projects/mrms/" >MRMS</a>.
+      The plots were initially created by Tony Lorenzo of the
       <a href="https://forecasting.energy.arizona.edu" >UA Renewable Power Forecasting Group</a>
       and the
       <a href="http://has.arizona.edu" >UA Department of Hydrology and Atmospheric Sciences</a>.
