--- a/artsy/templates/index.html
+++ b/artsy/templates/index.html
@@ -38,6 +38,10 @@
       The code is open-source and can be found on
       <a href="https://github.com/uarenforecasting/artsy">GitHub</a>.
     </p>
+    <div class="well">
+      Note that, currently, all values greater than 2 inches are grouped into
+      the last bin/color.
+    </div>
   </div>
 </div>
 {{ plot_script | indent(8) }}
