--- a/artsy/templates/index.html
+++ b/artsy/templates/index.html
@@ -39,7 +39,7 @@
       <a href="https://github.com/uarenforecasting/artsy">GitHub</a>.
     </p>
     <div class="well">
-      Note that, currently, all values greater than 2 inches are grouped into
+      Note that, currently, all values greater than {{ max_val }} inches are grouped into
       the last bin/color.
     </div>
   </div>
