--- a/artsy/templates/index.html
+++ b/artsy/templates/index.html
@@ -39,8 +39,10 @@
       <a href="https://github.com/uarenforecasting/artsy">GitHub</a>.
     </p>
     <div class="well">
-      Note that, currently, all values greater than {{ max_val }} inches are grouped into
-      the last bin/color.
+      Note that, currently, all values greater than {{ max_val }} inches are
+      grouped into the last bin on the histogram and white on the map.
+      Values less than {{ min_val }} inches are grey on the map and
+      grouped into the first bin on the histogram.
     </div>
   </div>
 </div>
