add low vals to histogram

--- a/artsy/templates/index.html
+++ b/artsy/templates/index.html
@@ -41,8 +41,7 @@
     <div class="well">
       Note that, currently, all values greater than {{ max_val }} inches are
       grouped into the last bin on the histogram and white on the map.
-      Values less than {{ min_val }} inches are grey on the map and
-      grouped into the first bin on the histogram.
+      Values less than {{ min_val }} inches are grey on the map.
     </div>
   </div>
 </div>
