size, layout adjustments (#3)
* remove resize tool, configure tile source

* adjust layout

* add attribution

* adjust axis

* adjust scaling

* make low values grey and high white

* add low vals to histogram

--- a/artsy/templates/index.html
+++ b/artsy/templates/index.html
@@ -39,8 +39,9 @@
       <a href="https://github.com/uarenforecasting/artsy">GitHub</a>.
     </p>
     <div class="well">
-      Note that, currently, all values greater than 2 inches are grouped into
-      the last bin/color.
+      Note that, currently, all values greater than {{ max_val }} inches are
+      grouped into the last bin on the histogram and white on the map.
+      Values less than {{ min_val }} inches are grey on the map.
     </div>
   </div>
 </div>
