--- a/artsy/templates/index.html
+++ b/artsy/templates/index.html
@@ -34,7 +34,7 @@
       The site was produced using the
       <a href="bokeh.pydata.org" >Bokeh</a>
       visualization library with map tiles provided by
-      <a href="stamen.com" >Stamen Design</a>.
+      <a href="https://stamen.com/" >Stamen Design</a>.
       The code is open-source and can be found on
       <a href="https://github.com/uarenforecasting/artsy">GitHub</a>.
     </p>
