Another broken link

--- a/artsy/templates/index.html
+++ b/artsy/templates/index.html
@@ -32,7 +32,7 @@
       and the
       <a href="http://has.arizona.edu" >UA Department of Hydrology and Atmospheric Sciences</a>.
       The site was produced using the
-      <a href="bokeh.pydata.org" >Bokeh</a>
+      <a href="https://docs.bokeh.org/en/latest/" >Bokeh</a>
       visualization library with map tiles provided by
       <a href="https://stamen.com/" >Stamen Design</a>.
       The code is open-source and can be found on
